aptosid-art-legacy (2011.03.14) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 05 Aug 2012 02:46:53 +0200

aptosid-art-legacy (2011.03.13) unstable; urgency=low

  [ Roland Engert ]
  * parallelize build system for keres to the maximum, ignore splash-kde for
    now.

  [ Stefan Lippers-Hollmann ]
  * rework keres/splash-kde to parallelize the build system to the maximum.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 05 Aug 2012 02:46:14 +0200

aptosid-art-legacy (2011.03.12) unstable; urgency=low

  [ Roland Engert ]
  * parallelize build system for apate to the maximum.

  [ Stefan Lippers-Hollmann ]
  * introduce -really-wide variants.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 05 Aug 2012 01:20:11 +0200

aptosid-art-legacy (2011.03.11) unstable; urgency=low

  * fix dependency bug.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Aug 2012 03:04:47 +0200

aptosid-art-legacy (2011.03.10) unstable; urgency=low

  [ Roland Engert ]
  * parallelize build system for geras to the maximum.

  [ Stefan Lippers-Hollmann ]
  * geras: fix dm-kdm/
  * geras: fix splash-kde/
  * refactor Makefiles to combine identical targets.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Aug 2012 02:41:47 +0200

aptosid-art-legacy (2011.03.9) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * s/ttf-dustin/fonts-dustin/ in the templates as well.

  [ Roland Engert ]
  * parallelize build system for ponos to the maximum.
  * parallelize build system for imera to the maximum.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2012 23:37:01 +0200

aptosid-art-legacy (2011.03.8) unstable; urgency=low

  [ Rick Battle ]
  * s/ttf-dustin/fonts-dustin/ 

  [ Stefan Lippers-Hollmann ]
  * parallelize build system for void to the maximum.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2012 01:22:06 +0200

aptosid-art-legacy (2011.03.7) unstable; urgency=low

  * fix dependencies for ksplash in KDE >= 4.7.
