@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 NAME= aptosid-aether
-SIZES= 400x250 1024x768 1280x800 1280x1024 1440x900 1600x1200 1920x1200 
+SIZES= 400x250 1024x768 1280x800 1280x1024 1440x900 1600x1200 1920x1200
 SVG= $(NAME).svg
 
 all: $(SIZES)
