@@ -2,7 +2,7 @@
 
 NAME= aptosid-hypnos
 NAMEWIDE= $(NAME)-wide
-SIZES= 400x250 1024x768 1280x800 1280x1024 1440x900 1600x1200 1920x1200 
+SIZES= 400x250 1024x768 1280x800 1280x1024 1440x900 1600x1200 1920x1200
 
 all: $(SIZES)
 	mkdir -p $(NAME)
