@@ -3,7 +3,7 @@
 NAME           = aptosid-ponos
 NAMEWIDE       = $(NAME)-wide
 NAMEREALLYWIDE = $(NAME)-really-wide
-SIZES          = 400x250 1024x768 1366x768 1280x800 1280x1024 1440x900 1600x1200 1920x1080 1920x1200 
+SIZES          = 400x250 1024x768 1366x768 1280x800 1280x1024 1440x900 1600x1200 1920x1080 1920x1200
 
 all: $(SIZES)
 	mkdir -p $(NAME)
